--- a/sass/_profile-info.scss
+++ b/sass/_profile-info.scss
@@ -14,7 +14,8 @@
 				width: 100%;
 			}
 			hr {
-				margin-bottom: 10px;
+				margin-top: 5px;
+				margin-bottom: 5px;
 				width: 100%;
 				background-color: #707070;
 				opacity: 0.4;
