--- a/sass/fonts/_icon.scss
+++ b/sass/fonts/_icon.scss
@@ -105,6 +105,9 @@
 .icon-fire:before {
   content: "\e91a";
 }
+.icon-fire-2:before {
+  content: "\e91f";
+}
 .icon-heart:before {
   content: "\e91b";
 }
