--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -64,6 +64,20 @@ img{
 	display: none;
 }
 
+@include marginTop(0); // .margin-top-0
+@include marginTop(5);
+@include marginTop(10);
+@include marginTop(15);
+@include marginTop(20);
+@include marginTop(30);
+
+@include marginRight(0); // .margin-Right-0
+@include marginRight(5);
+@include marginRight(10);
+@include marginRight(15);
+@include marginRight(20);
+@include marginRight(30);
+
 @include marginBottom(0); // .margin-bottom-0
 @include marginBottom(5);
 @include marginBottom(10);
@@ -71,11 +85,20 @@ img{
 @include marginBottom(20);
 @include marginBottom(30);
 
+@include marginLeft(0); // .margin-left-0
+@include marginLeft(5);
+@include marginLeft(10);
+@include marginLeft(15);
+@include marginLeft(20);
+@include marginLeft(30);
+
 .padding-all-15 {
 	padding: 15px !important;
 }
 
-@include fontSizeClass(17); // .font-size-17
+@include fontSizeClass(14); // .font-size-14
+@include fontSizeClass(17);
+@include fontSizeClass(20);
 @include fontSizeClass(24);
 @include fontSizeClass(28);
 @include fontSizeClass(32);
@@ -283,6 +306,16 @@ section, .section {
 	@include hover {
 		color: $basic-color;
 		text-decoration: underline;
+	}
+}
+.logo-wrap {
+	display: inline-block;
+	img {
+		display: block;
+		&:first-child {
+			margin-bottom: 12px;
+
+		}
 	}
 }
 
