--- a/pug/cards/_cards-fifth-slider.pug
+++ b/pug/cards/_cards-fifth-slider.pug
@@ -1,5 +1,5 @@
-.card.card-slider.cardFifth-slider
-	.card-wrap.card-slider-wrap.cardFifth-slider-wrap
+.card.card-slider.card-fifth-slider
+	.card-wrap.card-slider-wrap.card-fifth-slider-wrap
 
 		- var items = [];
 		- items.push({url: 'background-image: url(img/person-photo-01.jpg);'});
@@ -11,5 +11,5 @@
 		- items.push({url: 'background-image: url(img/person-photo-02.jpg);'});
 		- items.push({url: 'background-image: url(img/person-photo-01.jpg);'});
 		each item in items
-			.card-slider__item.cardFifth-slider__item
-				.cardFifth-slider__imgbox.card__imgbox(style=item.url)
+			.card-slider__item.card-fifth-slider__item
+				.card-fifth-slider__imgbox.card__imgbox(style=item.url)
