--- a/pug/page/_page-head-filters.pug
+++ b/pug/page/_page-head-filters.pug
@@ -2,7 +2,7 @@
 	.card-wrap.card-full-wrap.card-wrap-head
 .row
 	.col-xl-12
-		.card.bg-color-light
+		.card.bg-color-light---.margin-bottom-15
 			.content-title
 				.content-titlebox
 					h1=pageTitle
